--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@
     margin: 5px;
 }
 
+button {
+    margin: 5px;
+    border-radius: 5px;
+    border-color: black;
+    background-color:darkgrey;
+}
+
 #screen > section {
     border-style: solid;
     border-width: 0px 1px;
@@ -49,4 +56,10 @@
 #cp-bar {
     border-color: blue;
     color: blue;
+}
+
+/* Dice */
+.locked {
+    background-color: lightgreen;
+    color: darkred;
 }
